--- a/manifest.yml
+++ b/manifest.yml
@@ -1,9 +1,9 @@
 applications:
 - services:
-  - [your app name]-cloudantNoSQLDB
+  - [app_name]-cloudantNoSQLDB
 - disk_quota: 1024M
-  host: [your app name]
-  name: [your app name]
+  host: [app_name]
+  name: [app_name]
   path: .
   domain: mybluemix.net
   instances: 1
