--- a/birdland-frontend/bower.json
+++ b/birdland-frontend/bower.json
@@ -2,18 +2,19 @@
   "name": "birdland",
   "version": "0.0.0",
   "dependencies": {
+    "angular": "~1.4.0",
     "angular-animate": "~1.4.0",
     "angular-cookies": "~1.4.0",
-    "angular-touch": "~1.4.0",
     "angular-sanitize": "~1.4.0",
-    "jquery": "~2.1.4",
+    "angular-touch": "~1.4.0",
     "angular-ui-router": "~0.2.15",
-    "bootstrap-sass-official": "~3.3.4",
-    "malarkey": "yuanqing/malarkey#~1.3.0",
-    "toastr": "~2.1.1",
-    "moment": "~2.10.3",
     "animate.css": "~3.3.0",
-    "angular": "~1.4.0"
+    "bootstrap-sass-official": "~3.3.4",
+    "jquery": "~2.1.4",
+    "malarkey": "yuanqing/malarkey#~1.3.0",
+    "moment": "~2.10.3",
+    "ngmap": "~1.13.4",
+    "toastr": "~2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
