--- a/birdland-frontend/bower.json
+++ b/birdland-frontend/bower.json
@@ -5,6 +5,7 @@
     "angular": "~1.4.0",
     "angular-animate": "~1.4.0",
     "angular-cookies": "~1.4.0",
+    "angular-google-maps": "~2.2.1",
     "angular-sanitize": "~1.4.0",
     "angular-touch": "~1.4.0",
     "angular-ui-router": "~0.2.15",
@@ -13,7 +14,6 @@
     "jquery": "~2.1.4",
     "malarkey": "yuanqing/malarkey#~1.3.0",
     "moment": "~2.10.3",
-    "ngmap": "~1.13.4",
     "toastr": "~2.1.1"
   },
   "devDependencies": {
